# HF25-PancakeSloths

./: .env  .gitignore  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
anchor/: Anchor.toml
anchor/programs/community/: Cargo.toml
anchor/programs/governance/: Cargo.toml
anchor/programs/lending/: Cargo.toml
anchor/programs/lending/src/: lib.rs
anchor/programs/lending/tests/: lending.ts
anchor/programs/user/: Cargo.toml
anchor/programs/user/src/: lib.rs
anchor/programs/user/tests/: user.ts
anchor/tests/: community.spec.ts  lending.spec.ts  tokenization.spec.ts  user.spec.ts
plan/: build_and_test.md  program_setup.md  token.md
src/app/: layout.tsx
src/components/: dashboard.tsx  tokenization-interface.tsx
tests/: setup.ts
unityVault/: Cargo.toml
unityVault/anchor-program/: lib.rs
unityVault/anchor-program/community/: context.rs  instructions.rs  mod.rs  state.rs
unityVault/anchor-program/governance/: context.rs  instructions.rs  state.rs
unityVault/anchor-program/lending/: context.rs  instructions.rs  mod.rs  state.rs
unityVault/anchor-program/tokenization/: context.rs  instructions.rs  state.rs
unityVault/anchor-program/user/: context.rs  instructions.rs  state.rs
unityVault/examples/: client.rs
unityVault/src/: lib.rs
unityVault/src/community/: context.rs  instructions.rs  mod.rs  state.rs
unityVault/src/governance/: context.rs  instructions.rs  state.rs
unityVault/src/lending/: context.rs  instructions.rs  state.rs
unityVault/src/tokenization/: context.rs  instructions.rs  state.rs
unityVault/src/user/: instructions.rs  mod.rs  state.rs
(+8 files in other folders)
