[package]
name = "unity_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
solana-program = "1.17"
borsh = "1.2"
borsh-derive = "1.2"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
tokio = { version = "1.44.2", features = ["rt", "macros"] }
test-case = "3.3.1"
solana-client = "1.18.26"

