[package]
name = "lending"
version = "0.1.0"
description = "Lending program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.17.0" 